--- a/ty.html
+++ b/ty.html
@@ -1,5 +1,5 @@
 <!-- 
-This file contains code for the COMING SOON page.
+This file contains code for the THANK YOU page.
 -->
 <!DOCTYPE html>
 <html>
@@ -19,17 +19,8 @@ This file contains code for the COMING SOON page.
   <body>
     <div id="js"></div>
     <div id="container">
-      <h1 class="title">SMART FOREST <span>&copy;</span> IN DEVELOPMENT</h1>
-      <h1 class="cta">ENTER YOUR EMAIL FOR EARLY ACCESS</h1>
-      <form href="ty.html">
-        <input
-          type="text"
-          placeholder="Email address"
-          name="_replyto"
-          class="input"
-        />
-        <button type="submit" class="button">NOTIFY ME!</button>
-      </form>
+      <h1 class="title">SMART FOREST<span>&copy;</span></h1>
+      <h1 class="title">THANK YOU</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.18.4/dist/tsparticles.min.js"></script>
     <script>
