--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ This file contains code for the COMING SOON page.
     <div id="container">
       <h1 class="title">SMART FOREST <span>&copy;</span> IN DEVELOPMENT</h1>
       <h1 class="cta">ENTER YOUR EMAIL FOR EARLY ACCESS</h1>
-      <form href="ty.html">
+      <form action="ty.html" method="GET">
         <input
           type="text"
           placeholder="Email address"
