--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ This file contains code for the COMING SOON page.
         <input
           type="text"
           placeholder="Email address"
-          name="_replyto"
+          name="_success"
           class="input"
         />
         <button type="submit" class="button">NOTIFY ME!</button>
