--- a/ty.html
+++ b/ty.html
@@ -20,7 +20,7 @@ This file contains code for the THANK YOU page.
     <div id="js"></div>
     <div id="container">
       <h1 class="title">SMART FOREST<span>&copy;</span></h1>
-      <h1 class="title">THANK YOU</h1>
+      <h1 class="title">THANK YOU!</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.18.4/dist/tsparticles.min.js"></script>
     <script>
