--- a/index.html
+++ b/index.html
@@ -1,41 +1,38 @@
-<!-- 
-This file contains code for the COMING SOON page.
--->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>SMART FOREST &copy;</title>
-    <meta name="description" content="SMART FOREST &copy;" />
-    <link rel="shortcut icon" href="img/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="js"></div>
-    <div id="container">
-      <h1 class="title">SMART FOREST <span>&copy;</span> IN DEVELOPMENT</h1>
-      <h1 class="cta">ENTER YOUR EMAIL FOR EARLY ACCESS</h1>
-      <form action="ty.html" method="GET">
-        <input
-          type="text"
-          placeholder="Email address"
-          name="_success"
-          class="input"
-        />
-        <button type="submit" class="button">NOTIFY ME!</button>
-      </form>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.18.4/dist/tsparticles.min.js"></script>
-    <script>
-      window.onload = function () {
-        particlesJS.load("js", "particles.json");
-      };
-    </script>
-  </body>
+   <head>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <title>SMART FOREST &copy;</title>
+      <meta name="description" content="SMART FOREST &copy;" />
+      <link rel="shortcut icon" href="assets/img/favicon.png" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap"
+         rel="stylesheet"
+         />
+      <link rel="stylesheet" href="assets/css/style.min.css" />
+   </head>
+   <body>
+      <div id="js"></div>
+      <div id="container">
+         <h1 class="title">SMART FOREST <span>&copy;</span> IN DEVELOPMENT</h1>
+         <h1 class="cta">ENTER YOUR EMAIL FOR EARLY ACCESS</h1>
+         <form action="ty.html" method="GET">
+            <input
+               type="text"
+               placeholder="Email address"
+               name="_success"
+               class="input"
+               />
+            <button type="submit" class="button">NOTIFY ME!</button>
+         </form>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.18.4/dist/tsparticles.min.js"></script>
+      <script>
+         window.onload = function () {
+           particlesJS.load("js", "particles.json");
+         };
+      </script>
+   </body>
 </html>
