--- a/ty.html
+++ b/ty.html
@@ -1,32 +1,29 @@
-<!-- 
-This file contains code for the THANK YOU page.
--->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>SMART FOREST &copy;</title>
-    <meta name="description" content="SMART FOREST &copy;" />
-    <link rel="shortcut icon" href="img/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="js"></div>
-    <div id="container">
-      <h1 class="title">SMART FOREST<span>&copy;</span></h1>
-      <h1 class="title">THANK YOU!</h1>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.18.4/dist/tsparticles.min.js"></script>
-    <script>
-      window.onload = function () {
-        particlesJS.load("js", "particles.json");
-      };
-    </script>
-  </body>
+   <head>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <title>SMART FOREST &copy;</title>
+      <meta name="description" content="SMART FOREST &copy;" />
+      <link rel="shortcut icon" href="assets/img/favicon.png" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap"
+         rel="stylesheet"
+         />
+      <link rel="stylesheet" href="assets/css/style.min.css" />
+   </head>
+   <body>
+      <div id="js"></div>
+      <div id="container">
+         <h1 class="title">SMART FOREST<span>&copy;</span></h1>
+         <h1 class="title">THANK YOU!</h1>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.18.4/dist/tsparticles.min.js"></script>
+      <script>
+         window.onload = function () {
+           particlesJS.load("js", "particles.json");
+         };
+      </script>
+   </body>
 </html>
