--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
    <body>
       <div id="js"></div>
       <div id="container">
-         <h1 class="title">SMART FOREST <span>&copy;</span> IN DEVELOPMENT</h1>
-         <h1 class="cta">ENTER YOUR EMAIL FOR EARLY ACCESS</h1>
+         <h1 class="title">SMART FOREST</h1>
+         <h1 class="cta">SIGN UP FOR EARLY ACCESS</h1>
+         <div class="form">
+         <h1 class="label">ENTER YOUR EMAIL ADDRESS </h1>
          <form action="ty.html" method="GET">
             <input
-               type="text"
-               placeholder="Email address"
+               type="email"
+               placeholder="Email"
                name="_success"
                class="input"
-               />
+               required/>
+               </div>
             <button type="submit" class="button">NOTIFY ME!</button>
          </form>
+         <footer>SMART FOREST &copy; 2021 <a href="http://www.jasonguro.com/">JASON GURO</a></footer>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.18.4/dist/tsparticles.min.js"></script>
       <script>
