--- a/ty.html
+++ b/ty.html
@@ -16,9 +16,12 @@
    <body>
       <div id="js"></div>
       <div id="container">
-         <h1 class="title">SMART FOREST<span>&copy;</span></h1>
-         <h1 class="title">THANK YOU!</h1>
+         <h1 class="title">SMART FOREST</h1>
+         <h1 class="cta-ty">THANK YOU</h1>
+         <h1 class="label-ty">YOU'LL BE NOTIFIED WHEN WE LAUCH</h1>
+
       </div>
+      <footer class="ty">SMART FOREST &copy; 2021 <a href="http://www.jasonguro.com/">JASON GURO</a></footer>
       <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.18.4/dist/tsparticles.min.js"></script>
       <script>
          window.onload = function () {
