--- a/ty.html
+++ b/ty.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <title>SMART FOREST &copy;</title>
-      <meta name="description" content="SMART FOREST &copy;" />
+      <meta name="description" content="SMART FOREST" />
       <link rel="shortcut icon" href="assets/img/favicon.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link
