--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta charset="utf-8" />
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W5KB7BP');</script>
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2258322,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+<meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <title>SMART FOREST &copy;</title>
       <meta name="description" content="SMART FOREST" />
@@ -14,6 +29,9 @@
       <link rel="stylesheet" href="assets/css/style.min.css" />
    </head>
    <body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W5KB7BP"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
       <div id="js"></div>
       <div id="container">
          <h1 class="title">SMART FOREST</h1>
