--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                </div>
             <button type="submit" class="button">NOTIFY ME!</button>
          </form>
-         <footer>SMART FOREST &copy; 2021 <a href="http://www.jasonguro.com/">JASON GURO</a></footer>
+         <footer>SMART FOREST &copy; 2021 <a href="http://resume.jasonguro.com/">JASON GURO</a></footer>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.18.4/dist/tsparticles.min.js"></script>
       <script>
